--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="instruction_content">Finally you are awake. You were misled by the dark magic in this forest and as you are trapped here,
         there is no way leading you outside this place unless you could find four missing rubies. Those rubies are hidden in treasure boxes
         somewhere in the forest. You will be asked to take some challenges when opening the boxes, and you will get gold as rewards as well.
-        You should find another guard to help you out in the forest once you find all the rubies.
+        You should find another guard in the forest to help you out once you find all the rubies.
     </string>
 
     <string name="box_tips">IMPORTANT NOTICE! When you find the treasure spots, you will find two different boxes in front of you.
